--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>About</title>
 </head>
 <body>
     <header>
-        <h1 class="site-title">Devin Hamilton</h1>
-        <h2 class="site-subtitle">Web Developer</h2>
+        <h1 class="site-title">Devin Hamilton</h1>        
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -17,12 +17,13 @@
             </ul>
         </nav>        
     </header>
+    <h2 class="site-subtitle">Web Developer</h2>
     <main>
         <!-- Your home content goes here -->
-        <h2>About</h2>
+        <h1>About</h1>
         <!-- Add your personalized content and images -->
-        <img src="Images/Image 5-18-23 at 12.12 AM.jpg" alt="Devin Hamilton">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.
+        <img src="Images/WisePanda.png" alt="Devin Hamilton">
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.
     </main>
     <footer>
         <p>&copy; 2023 Devin Hamilton</p>
