--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1 class="site-title">Devin Hamilton</h1>
-        <h2 class="site-subtitle">Web Developer</h2>
+        <h1 class="site-title">Devin Hamilton</h1>        
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -18,12 +17,13 @@
             </ul>
         </nav>
     </header>
+        <h2 class="site-subtitle">Web Developer</h2>
     <main>
         <!-- Your home content goes here -->
         <h1>Welcome to My Personal Website</h1>
         <!-- Add your personalized content and images -->
-        <img src="Images/IMG_1296.png" alt="Devin Hamilton">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.         
+        <img src="Images/Devin_3d.png" alt="Devin Hamilton">
+        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.         
     </main>
     <footer>
         <p>&copy; 2023 Devin Hamilton</p>
