--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         </nav>        
     </header>
     <h2 class="site-subtitle">Web Developer</h2>
-    <main>
+    <main class="table">
         <!-- Your home content goes here -->
         <h1>About</h1>
         <!-- Add your personalized content and images -->
