--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
         <h1 class="site-title">Devin Hamilton</h1>        
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="index.html">Home</a></li>
+                <li><a class="link" href="about.html">About</a></li>
+                <li><a class="link" href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
         <h2 class="site-subtitle">Web Developer</h2>
-    <main>
+    <main class="table">
         <!-- Your home content goes here -->
         <h1>Welcome to My Personal Website</h1>
         <!-- Add your personalized content and images -->
+        
         <img src="Images/Devin_3d.png" alt="Devin Hamilton">
-        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.         
+        <section class="hero-section">
+            <blockquote class="hero-quote">“If you are working on something <br> that you really care about, you dont <br> have to be pushed. The vision pulls you.” <br> - Steve Jobs </blockquote>
+        </section>         
     </main>
     <footer>
         <p>&copy; 2023 Devin Hamilton</p>
