rename img file in html

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1>Welcome to My Personal Website</h1>
         <!-- Add your personalized content and images -->
         
-        <img src="Images/Devin_3d.png" alt="Devin Hamilton">
+        <img src="Images/Devin-3d.png" alt="Devin Hamilton">
         <section class="hero-section">
             <blockquote class="hero-quote">“If you are working on something <br> that you really care about, you dont <br> have to be pushed. The vision pulls you.” <br> - Steve Jobs </blockquote>
         </section>         
