Copied files from block09/Personal-site

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="form.css">   
+    <title>Contact</title>
 </head>
 <body>
     <header>
@@ -14,21 +15,23 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="contact.html">Contact</a></li>                
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </nav>
-    </header>
-    <h2 class="site-subtitle">Web Developer</h2>
+        </nav>        
+    </header> 
     <main class="table">
         <!-- Your home content goes here -->
-        <h1>Portfolio</h1>
+        <h1>Contact</h1>
         <!-- Add your personalized content and images -->
-        <img src="Images/CoolPanda.png" alt="Devin Hamilton">
-        <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.
-    </main>
+        <img src="Images/Moon-Panda.png" alt="Devin Hamilton">
+        <p class="content">
+    </main>   
+
+    
+
     <footer>
         <p>&copy; 2023 Devin Hamilton</p>
     </footer>
-    <script src="helloworld.js"></script>   
+    <script src="submit.js"></script>
 </body>
 </html>
