--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <li><a class="link" href="index.html">Home</a></li>
                 <li><a class="link" href="about.html">About</a></li>
                 <li><a class="link" href="portfolio.html">Portfolio</a></li>
+                <li><a class="link" href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
