--- a/about.html
+++ b/about.html
@@ -26,9 +26,20 @@
         <img src="Images/WisePanda.png" alt="Devin Hamilton">
         <p class="content">Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Quis ducimus nostrum dignissimos animi hic aperiam, <br>voluptatem tenetur accusamus facilis esse obcaecati labore <br>minus laborum, provident enim quo, corporis illum quos.
     </main>
-    <footer>
-        <p>&copy; 2023 Devin Hamilton</p>
-    </footer>
-    <script src="helloworld.js"></script>
+    <footer> 
+        <div class="media-links">        
+        <h3 class="media-title">Follow Me</h3>            
+        <a href="https://facebook.com" target="_blank">
+            <img class="media-link" src="images/facebook.svg" alt="Facebook Logo">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img class="media-link" src="images/twitter.svg" alt="Twitter Logo">
+        </a>
+        <a href="https://linkedin.com" target="_blank">
+            <img class="media-link" src="images/linkedin.svg" alt="LinkedIn Logo">
+        </a>
+    </div>
+        <p class="copyright" &copy; 2023 Devin Hamilton>
+    </footer>     
 </body>
 </html>
