--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
             <blockquote class="hero-quote">“If you are working on something <br> that you really care about, you dont <br> have to be pushed. The vision pulls you.” <br> - Steve Jobs </blockquote>
         </section>         
     </main>
-    <footer>
-        <p>&copy; 2023 Devin Hamilton</p>
-    </footer>
-    <script src="helloworld.js"></script>
+    <footer> 
+        <div class="media-links">        
+        <h3 class="media-title">Follow Me</h3>            
+        <a href="https://facebook.com" target="_blank">
+            <img class="media-link" src="images/facebook.svg" alt="Facebook Logo">
+        </a>
+        <a href="https://twitter.com" target="_blank">
+            <img class="media-link" src="images/twitter.svg" alt="Twitter Logo">
+        </a>
+        <a href="https://linkedin.com" target="_blank">
+            <img class="media-link" src="images/linkedin.svg" alt="LinkedIn Logo">
+        </a>
+    </div>
+        <p class="copyright" &copy; 2023 Devin Hamilton>
+    </footer>   
 </body>
 </html>
